--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@ body {
   line-height: 1;
   font-family: "Playfair Display", serif;
   scroll-behavior: smooth;
+  background: black;
 
   @include mobile-only {
     font-size: 10px;
